--- a/ui/website/src/allBlocks/Journycaro/Journycaro.css
+++ b/ui/website/src/allBlocks/Journycaro/Journycaro.css
@@ -28,7 +28,7 @@
 }
 
 @media screen and (min-width: 1400px) {
-  .Journycaro1{
+ /* .Journycaro1{
     left:1138px !important;
   }
   .add1{
@@ -75,7 +75,7 @@
   }
   .add8{
     right:-827px ! important;
-  }
+  }*/
   
 }
 @media screen and (min-width: 1600px) {
