--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -73,9 +73,20 @@
     margin-right: 0px;
     position: relative;
     top: 31px;
-    right: 30px;
+    right: -96px;
     color: #333;
     font-weight: 500;
+ }
+
+
+@media screen and (min-width: 1280px) and (max-width: 1280px)
+              and (min-height: 800px) and (max-height: 800px) {
+
+     .new_wizardNotefor4{
+         right: -88px ! important;
+
+
+     }
  }
  .new_wizardNote_for6
  {
@@ -215,7 +226,7 @@
 }
 .new_round-tabfor4 {
     width: 24px;
-    margin-left: 29%;
+    margin-left: 90%;
     height: 24px;
     line-height: 36px;
     display: inline-block;
@@ -467,7 +478,7 @@
 
 @media screen and (min-width: 1400px) {
     .navigation_tab{
-        margin-left: 48px ! important;
+        margin-left: 40px ! important;
     }
 }
 
