--- a/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
+++ b/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
@@ -19,6 +19,14 @@
     font-weight: 700;
     letter-spacing: 2px;
 }
+@media only screen and (min-width: 1920px) and (max-width: 2560px) {
+  .downimgtext{
+    left:21em ! important;
+
+
+  }
+
+}
 .downimgtext_new{
    /* position: absolute;
     top: 5em;
@@ -455,7 +463,7 @@
 }
 
 @media screen and (min-width: 1400px) {
-  .downimgtext{
+ /* .downimgtext{
     left:28em !important;
   }
    #consultdown_img0{
@@ -502,7 +510,7 @@
   #consultdown_img5{
     left:67em ! important;
 
-  }
+  }*/
   
 }
 @media screen and (min-width: 1600px) {
