--- a/ui/website/src/allBlocks/Resourcevideo/Resourcevideo.css
+++ b/ui/website/src/allBlocks/Resourcevideo/Resourcevideo.css
@@ -115,7 +115,7 @@ height: 100px;
     color: #fff;
     font-size: 43px;
     font-weight: 600;
-    left: 27px;
+    /*left: 27px;*/
     top: 130px;
     letter-spacing: 2px;
   }
