--- a/ui/website/src/allBlocks/AllBlogsList/AllBlogsList.css
+++ b/ui/website/src/allBlocks/AllBlogsList/AllBlogsList.css
@@ -76,6 +76,13 @@
 	background-color: #fff;
 	box-shadow: 0px 11px 15px 1px #ccc;
 }
+@media only screen 
+    and (device-width : 1440px) 
+    and (device-height : 900px) { 
+    .All1blog1{
+    margin-left:55px ! important;
+  }
+}
 .blogSummeryp10{
 	padding-left:  20px;
 	padding-right: 20px;
