--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -857,7 +857,7 @@ height: 90px;
   .resbanner{
     background-image: url("/images/Mobile.png");
     background-size: cover;
-    height: 590px;
+    height: 635px;
     object-fit: contain;
     background-repeat: no-repeat;
   } 
@@ -965,10 +965,15 @@ height: 90px;
     width: 190px ! important;
   }
   .topnav a{
-    font-size: 15px ! important;
+    font-size: 18px ! important;
+    padding: 15px 15px;
+  }
+  .expertiesdropdown{
+    width:1316px ! important;
   }
   .dropdown .dropbtn{
-    font-size: 15px ! important;
+    font-size: 18px ! important;
+    padding: 15px 15px;
   }
 }
 @media only screen (min-width: 1600px) {
