--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -321,6 +321,7 @@
     width: 410px;
     height: 529px;
     left: -14px;
+    padding-top: 60px;
    }
   .topnav.responsive .icon {
     position: absolute;
