--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -832,7 +832,7 @@ height: 90px;
     and (min-device-width : 375px) 
     and (max-device-width : 667px){
       .resbanner{
-        height: 670px ! important;
+        height: 730px ! important;
 
       }
  }
@@ -845,11 +845,42 @@ height: 90px;
       }
  }
  @media only screen 
+    and (min-device-width : 411px) 
+    and (device-height : 731px){
+      .resbanner{
+        height: 740px ! important;
+
+      }
+ }
+  @media only screen 
+    and (min-device-width : 320px) 
+    and (device-height : 568px){
+      .resbanner{
+        height: 567px ! important;
+        background:50%;
+
+      }
+    }
+  @media only screen 
+    and (min-device-width : 393px) 
+    and (device-height : 851px){
+      .resbanner{
+        height: 860px ! important;
+        background:50%;
+
+      }
+      .webclientbackimg{
+        width: 310px ! important;
+        margin-left: 49px ! important;
+      }
+ }
+ @media only screen 
     and (device-width : 375px) 
     and (device-height : 812px) 
     and (-webkit-device-pixel-ratio : 3) { 
       .resbanner{
-        height: 735px ! important;
+        height: 810px ! important;
+        background: 50%,100%;
 
       }
  }
@@ -857,7 +888,7 @@ height: 90px;
   .resbanner{
     background-image: url("/images/Mobile.png");
     background-size: cover;
-    height: 635px;
+    height: 648px;
     object-fit: contain;
     background-repeat: no-repeat;
   } 
