--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -731,6 +731,11 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
      }
 
 }
+@media screen and (max-width:768px)  and (max-height: 1024px) {
+   .new_round-tabfor6{
+      margin-left: 59% ! important;
+     }
+}
 @media screen and (max-width:768px){
 
      .ContactmodalContent_brochure{
@@ -1038,6 +1043,64 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
    }
 
 } 
+
+  @media only screen and (device-width : 320px) and (device-height : 568px) { 
+    .B3T_challengesDiv {
+
+          width : 238px ! important;
+          margin-left: 27px ! important;
+          /*border: 1px solid #dedbdb;*/
+      }
+
+  }  
+   @media only screen and (device-width : 360px) and (device-height : 640px) { 
+    .B3T_challengesDiv {
+
+          width : 260px ! important;
+          margin-left: 27px ! important;
+          /*border: 1px solid #dedbdb;*/
+      }
+
+  }  
+   @media only screen and (device-width : 411px) and (device-height : 823px) { 
+    .B3T_challengesDiv {
+
+          width : 325px ! important;
+          /*margin-left: 27px ! important;*/
+          /*border: 1px solid #dedbdb;*/
+      }
+
+  }   
+    @media only screen and (device-width : 414px) and (device-height : 736px) { 
+    .B3T_challengesDiv {
+
+          width : 261px ! important;
+          margin-left: 60px ! important
+          /*border: 1px solid #dedbdb;*/
+      }
+      .B4T_img{
+        margin-left: 60px ! important;
+      }
+
+  } 
+    @media only screen and (device-width : 375px) and (device-height : 667px) { 
+    .B3T_challengesDiv {
+
+          width : 261px ! important;
+          margin-left: 43px ! important
+          /*border: 1px solid #dedbdb;*/
+      }
+      .B4T_img{
+        margin-left: 60px ! important;
+      }
+
+  } 
+
+  @media only screen and (device-width : 320px) and (device-height : 568px) { 
+     .righttextaboutus{
+      width: 245px ! important;
+    }
+  }       
 
 
 
