--- a/ui/website/src/blockTemplate/ChallengesTemp/ChallengesTemp.css
+++ b/ui/website/src/blockTemplate/ChallengesTemp/ChallengesTemp.css
@@ -3,7 +3,7 @@
 }
 .B3T_challengesDiv {
     top: 45px;
-    box-shadow: 0px 0px 3px 0px #d9d4d4;
+   box-shadow: 2px 2px 7px 2px #3a3737;
     margin-left: 23px;
     margin-bottom: 40px;
     min-height: 200px;
@@ -57,15 +57,16 @@
   /*left:57px ! important;*/
 }
 }
-@media (max-width: 480px){
-.B2T_challengesTitle{
-      margin-left: -6px  ! important;
+  @media (max-width: 480px){
+  .B2T_challengesTitle{
+        margin-left: -6px  ! important;
 
+  }
+  .B3T_challengesDiv{
+    margin-left: 0px ! important;
+  }
+  .B3T_challengesDiv{
+    /*left:57px ! important;*/
+  }
 }
-.B3T_challengesDiv{
-  margin-left: 0px ! important;
-}
-.B3T_challengesDiv{
-  /*left:57px ! important;*/
-}
-}
+ 
