Karuna added changes

--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -1051,6 +1051,9 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
           margin-left: 27px ! important;
           /*border: 1px solid #dedbdb;*/
       }
+      .padding_640{
+        padding-left: 0px;
+      }
 
   }  
    @media only screen and (device-width : 360px) and (device-height : 640px) { 
@@ -1059,6 +1062,13 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
           width : 260px ! important;
           margin-left: 27px ! important;
           /*border: 1px solid #dedbdb;*/
+      }
+      .BT3_text11{
+        padding-right: 29px ! important;
+      }
+
+      .padding_640{
+        padding-left: 0px;
       }
 
   }  
@@ -1069,6 +1079,20 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
           /*margin-left: 27px ! important;*/
           /*border: 1px solid #dedbdb;*/
       }
+
+       .serflip-card img{
+      margin-left: 20px ! important;
+    }   
+
+
+  }   
+   @media only screen and (device-width : 411px) and (device-height : 731px) { 
+   
+
+       .serflip-card img{
+      margin-left: 20px ! important;
+    }   
+
 
   }   
     @media only screen and (device-width : 414px) and (device-height : 736px) { 
@@ -1083,7 +1107,7 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
       }
 
   } 
-    @media only screen and (device-width : 375px) and (device-height : 667px) { 
+  @media only screen and (device-width : 375px) and (device-height : 667px) { 
     .B3T_challengesDiv {
 
           width : 261px ! important;
@@ -1100,7 +1124,65 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
      .righttextaboutus{
       width: 245px ! important;
     }
-  }       
+    .serflip-card img{
+      /*margin-left: 10px ! important;*/
+    }
+        .serflip-card {
+        width: 237px ! important;
+    }
+      .Typecomponent1Img_vision {
+        width: 300px ! important;
+    }
+    .blck1heightnew{
+      height: 284px ! important;
+    }
+    .blck1heightnew{
+      width:239px ! important;
+    }
+  } 
+@media only screen and (device-width : 393px) and (device-height : 851px) { 
+    .innerBlocktConsult{
+      height: 1721px ! important;
+
+    } 
+    #consultdown_img3{
+      top:96em ! important;
+    }
+
+    #consultdown_data3{
+      top:104em ! important;
+    }   
+    .resfooterend{
+      height: 65px ! important;
+    } 
+    .responsivefooter{
+      height: 591px ! important;
+    }
+    .contactcontent {
+      margin-bottom: 35px;
+      margin-left: 23px;
+      margin-top: 26px;
+   
+    }
+    .videocard{
+      widows: 270px ! important;
+    }
+    .BT3_text11{
+      padding-right: 29px ! important;
+    }
+    .serflip-card img{
+      margin-left: 15px ! important;
+    }
+
+    .NewLoader{
+      margin-left: 0px !important;
+    }
+
+  } 
+
+  .title_Description{
+    letter-spacing: 0.5px ! important;
+  }
 
 
 
