--- a/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
+++ b/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
@@ -2921,8 +2921,145 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
     width: 300px ! important;
      border: 1px solid #b5b2b2;
    }
+     .chevron {
+      position: absolute;
+      width: 28px;
+      height: 8px;
+      top: 88px;
+      left: 185px;
+    }
+    .scrollwrap{
+      width: 24px;
+    height: 24px;
+    top: 250px;
+    left: 650px;
+    z-index: 1000;
+    position: initial;
+    }
+    .text{
+      margin-left: 152px ! important;
+    }
 
- }  
+ } 
+
+@media only screen and (device-width : 393px) and (device-height : 851px) { 
+
+    .chevron {
+      position: absolute;
+      width: 28px;
+      height: 8px;
+      top: 88px;
+      left: 185px;
+    }
+    .scrollwrap{
+      width: 24px;
+    height: 24px;
+    top: 250px;
+    left: 650px;
+    z-index: 1000;
+    position: initial;
+    }
+    .text{
+      margin-left: 152px ! important;
+    }
+
+}
+@media only screen and (device-width : 411px) and (device-height : 731px) { 
+
+    .chevron {
+      position: absolute;
+      width: 28px;
+      height: 8px;
+      top: 88px;
+      left: 185px;
+    }
+    .scrollwrap{
+      width: 24px;
+    height: 24px;
+    top: 250px;
+    left: 650px;
+    z-index: 1000;
+    position: initial;
+    }
+    .text{
+      margin-left: 152px ! important;
+    }
+
+}
+@media only screen and (device-width : 411px) and (device-height : 823px) { 
+
+    .chevron {
+      position: absolute;
+      width: 28px;
+      height: 8px;
+      top: 88px;
+      left: 185px;
+    }
+    .scrollwrap{
+      width: 24px;
+    height: 24px;
+    top: 250px;
+    left: 650px;
+    z-index: 1000;
+    position: initial;
+    }
+    .text{
+      margin-left: 152px ! important;
+    }
+
+}
+
+@media only screen and (device-width : 375px) and (device-height : 667px) { 
+
+    .chevron {
+      position: absolute;
+      width: 28px;
+      height: 8px;
+      top: 88px;
+      left: 185px;
+    }
+    .scrollwrap{
+      width: 24px;
+    height: 24px;
+    top: 250px;
+    left: 650px;
+    z-index: 1000;
+    position: initial;
+    }
+    .text{
+      margin-left: 152px ! important;
+    }
+    .webclientbackimg{
+      width: 310px ! important;
+    }
+
+
+}
+@media only screen and (device-width : 375px) and (device-height : 812px) { 
+
+    .chevron {
+      position: absolute;
+      width: 28px;
+      height: 8px;
+      top: 88px;
+      left: 185px;
+    }
+    .scrollwrap{
+      width: 24px;
+    height: 24px;
+    top: 250px;
+    left: 650px;
+    z-index: 1000;
+    position: initial;
+    }
+    .text{
+      margin-left: 152px ! important;
+    }
+
+}
+
+
+
  /* @media only screen 
     and (min-device-width : 320px) 
     and (max-device-width : 640px){
@@ -2941,6 +3078,24 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
    }
    .webclientcaro {
     width: 310px ! important;
+    }
+     .chevron {
+      position: absolute;
+      width: 28px;
+      height: 8px;
+      top: 88px;
+      left: 185px;
+    }
+    .scrollwrap{
+      width: 24px;
+    height: 24px;
+    top: 250px;
+    left: 650px;
+    z-index: 1000;
+    position: initial;
+    }
+    .text{
+      margin-left: 152px ! important;
     }
 
   } 
@@ -2973,6 +3128,26 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
  @media only screen 
     and (min-device-width : 320px) 
    and (device-height : 568px){
+
+       .chevron {
+      position: absolute;
+      width: 28px;
+      height: 8px;
+      top: 88px;
+      left: 185px;
+    }
+    .scrollwrap{
+      width: 24px;
+    height: 24px;
+    top: 250px;
+    left: 650px;
+    z-index: 1000;
+    position: initial;
+    }
+    .text{
+      margin-left: 152px ! important;
+    }
+
    .webclientbackimg{
         width: 255px ! important;
         margin-left: 30px ! important;
