--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -534,6 +534,9 @@
     .new_wizardNotefor5{
         right: 5px ! important;
     }  
+    .new_round-tabfor6{
+        margin-left: 2% ! important;
+     }
   } 
    @media only screen and (device-width : 320px) and (device-height : 568px) { 
     .adjustfor5{
@@ -567,6 +570,9 @@
     .new_wizardNote_for6{
         right: 3px ! important;
     }  
+    .serflip-cardservices img{
+        margin-left: 20px;
+    }
   }      
 
  @media only screen and (device-width : 414px) and (device-height : 736px) { 
@@ -576,6 +582,46 @@
     .new_wizardNote_for6{
         right: 3px ! important;
     }  
-  }      
+    .navigationTitle_for6 {
+            left: 98px ! important;
+        }
+  } 
+
+   @media only screen and (device-width : 393px) and (device-height : 851px) { 
+   .new_round-tabfor6 {
+            margin-left: 18% ! important;
+        }
+    .new_wizardNote_for6{
+        right: 3px ! important;
+    }  
+    .new_round-tabfor5{
+        margin-left: 28% ! important;
+    }
+    .new_wizardNotefor5{
+        right: 2px ! important;
+    }
+  }  
+
+ @media only screen and (device-width : 411px) and (device-height : 731px) { 
+           .new_round-tabfor6 {
+            margin-left: 33% ! important;
+        }
+
+        .new_wizardNote_for6{
+            right: -4px ! important;
+        }
+  }  
+
+  @media only screen and (device-width : 411px) and (device-height : 823px) { 
+          
+
+        .new_wizardNote_for6{
+            right: -4px ! important;
+        }
+  }  
+
+
+
+
 
 
