--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -591,6 +591,163 @@ border:1px solid #eee ! important;
     color:#333 ! important;
   }
 
+ @media only screen and (device-width : 375px) and (device-height : 812px) { 
+   .topnav a{
+    /*font-size: 0px ! important;*/
+   }
+   .topnav a.icon{
+    top:-15px ! important;
+     right: -16px ! important;
+   }
+   .headerlogo img {
+    height: 68px ! important;
+    z-index: 1000;
+    margin-left: -12px;
+    margin-top: 12px;
+    }
+    .ct-topbar{
+      left:293px ! important;
+    }
+
+  }  
+  @media only screen and (device-width : 414px) and (device-height : 736px) { 
+   .topnav a{
+    /*font-size: 0px ! important;*/
+   }
+   .topnav a.icon{
+    top:-15px ! important;
+     right: -16px ! important;
+   }
+   .headerlogo img {
+    height: 68px ! important;
+    z-index: 1000;
+    margin-left: -12px;
+    margin-top: 12px;
+    }
+    .ct-topbar{
+      right: -78px ! important;
+    }
+
+  }  
+  @media only screen and (device-width : 375px) and (device-height : 667px) { 
+   .topnav a{
+    /*font-size: 0px ! important;*/
+   }
+   .topnav a.icon{
+    top:-15px ! important;
+    right: -16px ! important;
+   }
+   .headerlogo img {
+    height: 68px ! important;
+    z-index: 1000;
+    margin-left: -9px;
+    margin-top: 12px;
+    }
+    .ct-topbar{
+      left: 308px ! important;
+    }
+
+  } 
+  @media only screen and (device-width : 320px) and (device-height : 568px) { 
+   .topnav a{
+    /*font-size: 0px ! important;*/
+   }
+   .topnav a.icon{
+    top:-15px ! important;
+    right: -16px ! important;
+   }
+   .headerlogo img {
+    height: 68px ! important;
+    z-index: 1000;
+    margin-left: -9px;
+    margin-top: 12px;
+    }
+    .ct-topbar{
+      left: 254px ! important;
+    }
+
+  }  
+
+  @media only screen and (device-width : 411px) and (device-height : 823px) { 
+   .topnav a{
+    /*font-size: 0px ! important;*/
+   }
+   .topnav a.icon{
+    top:-15px ! important;
+    right: -16px ! important;
+   }
+   .headerlogo img {
+    height: 68px ! important;
+    z-index: 1000;
+    margin-left: -9px;
+    margin-top: 12px;
+    }
+    .ct-topbar{
+      left: 344px ! important;
+    }
+
+  }  
+
+ @media only screen and (device-width : 411px) and (device-height : 731px) { 
+   .topnav a{
+    /*font-size: 0px ! important;*/
+   }
+   .topnav a.icon{
+    top:-15px ! important;
+    right: -16px ! important;
+   }
+   .headerlogo img {
+    height: 68px ! important;
+    z-index: 1000;
+    margin-left: -9px;
+    margin-top: 12px;
+    }
+    .ct-topbar{
+      left: 344px ! important;
+    }
+
+  }  
+
+   @media only screen and (device-width : 360px) and (device-height : 640px) { 
+   .topnav a{
+    /*font-size: 0px ! important;*/
+   }
+   .topnav a.icon{
+    top:-15px ! important;
+    right: -16px ! important;
+   }
+   .headerlogo img {
+    height: 68px ! important;
+    z-index: 1000;
+    margin-left: -9px;
+    margin-top: 12px;
+    }
+    .ct-topbar{
+      left: 293px ! important;
+    }
+
+  }  
+
+@media only screen and (device-width : 393px) and (device-height : 851px) { 
+   .topnav a{
+    /*font-size: 0px ! important;*/
+   }
+   .topnav a.icon{
+    top:-15px ! important;
+    right: -16px ! important;
+   }
+   .headerlogo img {
+    height: 68px ! important;
+    z-index: 1000;
+    margin-left: -9px;
+    margin-top: 12px;
+    }
+    .ct-topbar{
+      left: 327px ! important;
+    }
+
+  }  
+
 
 
 
