--- a/ui/website/src/MasterPage/MasterPage.css
+++ b/ui/website/src/MasterPage/MasterPage.css
@@ -60,4 +60,12 @@
       margin-left: -250px !important;
     }
 
+  }  
+
+
+@media screen and (max-width: 600px){ 
+    .NewLoader{
+      margin-left: -250px !important;
+    }
+
   }       
