--- a/ui/website/src/blockTemplate/ImgBlock/ImgBlock.css
+++ b/ui/website/src/blockTemplate/ImgBlock/ImgBlock.css
@@ -2,3 +2,124 @@
   width: 100%;
   /*height: 556px;*/
 }
+@media only screen and (device-width : 411px) and (device-height : 823px) {
+	.services_img{
+	     width: 100% ! important ;
+	    object-fit: contain! important;
+	    height: 362px ! important;
+	    padding: 0px ! important;
+	}
+	.services_img img{
+		height: 375px ! important;
+        /*object-fit: contain;*/
+	 }
+
+}
+@media only screen and (device-width : 375px) and (device-height : 667px) {
+	.services_img{
+	     width: 100% ! important ;
+	    object-fit: contain! important;
+	    height: 362px ! important;
+	    padding: 0px ! important;
+	}
+	.img1 img{
+		height: 375px ! important;
+        object-fit: contain;
+	 }
+
+}	 
+@media only screen and (device-width : 393px) and (device-height : 851px) {
+	.services_img{
+	     width: 100% ! important ;
+	    object-fit: contain! important;
+	    height: 362px ! important;
+	    padding: 0px ! important;
+	}
+	.img1 img{
+		height: 375px ! important;
+        /*object-fit: contain;*/
+	 }
+
+}	 
+@media only screen and (device-width : 360px) and (device-height : 640px) {
+	.services_img{
+	     width: 100% ! important ;
+	    object-fit: contain! important;
+	    height: 362px ! important;
+	    padding: 0px ! important;
+	}
+	.img1 img{
+		height: 375px ! important;
+        /*object-fit: contain;*/
+	 }
+
+}	
+@media only screen and (device-width : 411px) and (device-height : 731px) {
+	.services_img{
+	     width: 100% ! important ;
+	    object-fit: contain! important;
+	    height: 362px ! important;
+	    padding: 0px ! important;
+	}
+	.img1 img{
+		height: 375px ! important;
+        /*object-fit: contain;*/
+	 }
+
+}	
+@media only screen and (device-width : 411px) and (device-height : 823px) {
+	.services_img{
+	     width: 100% ! important ;
+	    object-fit: contain! important;
+	    height: 362px ! important;
+	    padding: 0px ! important;
+	}
+	.img1 img{
+		height: 375px ! important;
+        /*object-fit: contain;*/
+	 }
+
+}	 
+@media only screen and (device-width : 320px) and (device-height : 568px) {
+	.services_img{
+	     width: 100% ! important ;
+	    object-fit: contain! important;
+	    height: 362px ! important;
+	    padding: 0px ! important;
+	}
+	.img1 img{
+		height: 375px ! important;
+        /*object-fit: contain;*/
+	 }
+
+}	
+@media only screen and (device-width : 414px) and (device-height : 736px) {
+	.services_img{
+	     width: 100% ! important ;
+	    object-fit: contain! important;
+	    height: 362px ! important;
+	    padding: 0px ! important;
+	}
+	.img1 img{
+		height: 375px ! important;
+        object-fit: contain;
+	 }
+
+}
+@media only screen and (device-width : 375px) and (device-height : 812px) {
+	.services_img{
+	     width: 100% ! important ;
+	    object-fit: contain! important;
+	    height: 362px ! important;
+	    padding: 0px ! important;
+	}
+	.img1 img{
+		height: 375px ! important;
+        /*object-fit: contain;*/
+	 }
+
+}	
+@media only screen and (device-width : 375px) and (device-height : 812px) {
+
+
+}	
