--- a/ui/website/src/blockTemplate/IogconsultTxtRight/IogconsultTxtRight.css
+++ b/ui/website/src/blockTemplate/IogconsultTxtRight/IogconsultTxtRight.css
@@ -25,3 +25,15 @@
 		padding-top: 0px ! important;
 	}
 }
+@media only screen and (min-device-width : 411px) and (max-device-width : 823px) {
+	
+	.BT3_text11{
+		padding-right: 29px ! important;
+	}
+}
+@media only screen and (min-device-width : 320px) and (max-device-width : 568px) {
+	
+	.BT3_text11{
+		padding-right: 0px ! important;
+	}
+}
