--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -314,6 +314,25 @@
 }
 
 @media screen and (max-width: 600px) {
+
+   .topnav a{
+    /*font-size: 0px ! important;*/
+   }
+   .topnav a.icon{
+    top:-3px ! important;
+     right: -8px ! important;
+   }
+   .headerlogo img {
+    height: 74px ! important;
+    z-index: 1000;
+    margin-left: -12px;
+    margin-top: 12px;
+    }
+    .ct-topbar{
+      right: -58px ! important;
+    }
+
+
   .topnav.responsive {
     position: absolute;
     background-color: #333333f5;
@@ -321,6 +340,7 @@
     width: 410px;
     height: 529px;
     left: -14px;
+    z-index: 1001;
     padding-top: 60px;
    }
   .topnav.responsive .icon {
@@ -606,7 +626,7 @@ border:1px solid #eee ! important;
     margin-top: 12px;
     }
     .ct-topbar{
-      left:293px ! important;
+      left:310px ! important;
     }
 
   }  
@@ -657,9 +677,9 @@ border:1px solid #eee ! important;
     right: -16px ! important;
    }
    .headerlogo img {
-    height: 68px ! important;
+    height: 74px ! important;
     z-index: 1000;
-    margin-left: -9px;
+    margin-left: -11px;
     margin-top: 12px;
     }
     .ct-topbar{
@@ -677,9 +697,9 @@ border:1px solid #eee ! important;
     right: -16px ! important;
    }
    .headerlogo img {
-    height: 68px ! important;
+    height: 74px ! important;
     z-index: 1000;
-    margin-left: -9px;
+    margin-left: -11px;
     margin-top: 12px;
     }
     .ct-topbar{
@@ -697,9 +717,9 @@ border:1px solid #eee ! important;
     right: -16px ! important;
    }
    .headerlogo img {
-    height: 68px ! important;
+    height: 74px ! important;
     z-index: 1000;
-    margin-left: -9px;
+    margin-left: -11px;
     margin-top: 12px;
     }
     .ct-topbar{
@@ -717,9 +737,9 @@ border:1px solid #eee ! important;
     right: -16px ! important;
    }
    .headerlogo img {
-    height: 68px ! important;
+    height: 74px ! important;
     z-index: 1000;
-    margin-left: -9px;
+    margin-left: -11px;
     margin-top: 12px;
     }
     .ct-topbar{
@@ -737,9 +757,9 @@ border:1px solid #eee ! important;
     right: -16px ! important;
    }
    .headerlogo img {
-    height: 68px ! important;
+    height: 74px ! important;
     z-index: 1000;
-    margin-left: -9px;
+    margin-left: -11px;
     margin-top: 12px;
     }
     .ct-topbar{
